Fixed borders to ensure even spacing

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 }
 
 #base {
-    width:420px;
+    width:400px;
     height: 100px;
     position:absolute;
     top: -100px;
@@ -32,7 +32,7 @@
     width: 100px;
     height:100%;
     display:inline-block;
-    border: red 3px;
+    border: solid black 1px;
     background-color: yellow;
 }
 
@@ -54,7 +54,7 @@
     left:0;
     top:0;
     height: 80vh;
-    background-color: rgb(193, 231, 193);
+    background-color: rgb(199, 73, 73);
 }
 
 #right-border {
@@ -62,5 +62,10 @@
     right:0;
     top:0;
     height: 80vh;
-    background-color: rgb(193, 231, 193);
+    background-color: rgb(199, 73, 73);
+}
+
+#test-blocks {
+    position: absolute;
+    top: 100px;
 }
